# GameSpecs

./: .editorconfig  .gitignore  .gitmodules  GameSpecs.sln  LICENSE  README.md  README.py  base.py  baseFM.py
Python/: .gitignore  FamilyManager.py  FileManager.py  MANIFEST.in  MANIFEST.inx  MINIFEST.in  PakFile.py  README.md  StoreManager.py  pyproject.toml  setup.cfg  test.py  test_Arkane.py  test_Bethesda.py  test_Bioware.py  test_Black.py  test_Capcom.py  test_Cig.py  test_Cryptic.py  test_Origin.py  test_Valve.py  test__.py
Python/Specs/: ArkaneFamily.json  BlackFamily.json  BlizzardFamily.json  CapcomFamily+0-D.json  CapcomFamily+E-L.json  CapcomFamily+M.json  CapcomFamily+N-R.json  CapcomFamily+S.json  CapcomFamily+T-Z.json  CapcomFamily.json  CigFamily.json  CrytekFamily.json  CyanideFamily.json  FrictionalFamily.json  IWFamily.json  MonolithFamily.json  OriginFamily.json  UbisoftFamily+1986-1999.json  UbisoftFamily+2000-2009.json  UbisoftFamily+2010-2019.json  UbisoftFamily+2020-present.json  UbisoftFamily.json  UnknownFamily.json  ValveFamily.json
Python/StoreManager/: BlizzardProtoDatabase.cmd  BlizzardStoreManager.py  EpicStoreManager.py  SteamStoreManager.py
Python/Tests/: ArkaneTest.py  Tests.py
Python/app/: ExplorerApp.py  Readme.md  renderDoc.cap
Python/app/widgets/: ContentHexView.py  FileContent.py  FileExplorer.py  HexView.py  HexViewWidget.py  MainPage.py  OpenWidget.py  SaveFileWidget.py  TextureView.py  resourcemgr.py  util.py
Python/game_specs/: Blizzard_pb2.py  GameSpec_Arkane.py  GameSpec_Base.py  GameSpec_Bethesda.py  GameSpec_Black.py  GameSpec_Cig.py  GameSpec_Cyanide.py  GameSpec_Epic.py  GameSpec_Frontier.py  GameSpec_IW.py  GameSpec_Id.py  GameSpec_Red.py  GameSpec_Valve.py  GameSpec_WbB.py  __init__.py  compression.py  familymgr.py  filemgr.py  filesys.py  openstk_poly.py  pakbinary.py  pakfile.py  reader.py  shared.py  storemgr.py  storemgr_blizzard.cmd  storemgr_blizzard.py  storemgr_epic.py  storemgr_gog.py  storemgr_steam.py  storemgr_ubisoft.py  test.py  utils.py
Python/game_specs/Arkane/: pakbinary_danae.py  pakbinary_void.py
Python/game_specs/Bethesda/: pakbinary_ba2.py  pakbinary_bsa.py
Python/game_specs/Black/: pakbinary.py  pakbinary_dat.py
Python/game_specs/_/: _other.py
Python/gamespecs/: GameSpec_Arkane.py  GameSpec_Base.py  GameSpec_Bethesda.py  GameSpec_Bioware.py  GameSpec_Black.py  GameSpec_Blizzard.py  GameSpec_Capcom.py  GameSpec_Cig.py  GameSpec_Cryptic.py  GameSpec_Crytek.py  GameSpec_Cyanide.py  GameSpec_Epic.py  GameSpec_Frictional.py  GameSpec_Frontier.py  GameSpec_IW.py  GameSpec_Id.py  GameSpec_Monolith.py  GameSpec_Origin.py  GameSpec_Red.py  GameSpec_Ubisoft.py  GameSpec_Unity.py  GameSpec_Valve.py  GameSpec_WbB.py  __init__.py  _config.py  _version.py  compression.py  family.py  familymgr.py  file.py  filemgr.py  filesrc.py  filesys.py  meta.py  metadata.py  metamgr.py  openstk_dds.py  openstk_poly.py  openstk_texturemgr.py  pak.py  (+11 more)
Python/gamespecs/Arkane/: binary_danae.py  pakbinary_danae.py  pakbinary_void.py
Python/gamespecs/Base/: binary.py  binary_dds.py  pakbinary_zip.py
Python/gamespecs/Bethesda/: pakbinary_ba2.py  pakbinary_bsa.py
Python/gamespecs/Bioware/: pakbinary_aurora.py  pakbinary_myp.py
Python/gamespecs/Black/: pakbinary_dat.py
Python/gamespecs/Capcom/: pakbinary_arc.py  pakbinary_big.py  pakbinary_bundle.py  pakbinary_kpka.py  pakbinary_plist.py
Python/gamespecs/Cig/: pakbinary_p4k.py
Python/gamespecs/Cryptic/: pakbinary_hogg.py
Python/gamespecs/Origin/: pakbinary_u8.py  pakbinary_u9.py  pakbinary_uo.py
Python/gamespecs/Specs/: ArkaneFamily.Sample.json  ArkaneFamily.json  BethesdaFamily.Sample.json  BethesdaFamily.json  BiowareFamily.Sample.json  BiowareFamily.json  BlackFamily.json  BlizzardFamily.Sample.json  BlizzardFamily.json  CapcomFamily+0-D.json  CapcomFamily+E-L.json  CapcomFamily+M.json  CapcomFamily+N-R.json  CapcomFamily+S.json  CapcomFamily+T-Z.json  CapcomFamily.Sample.json  CapcomFamily.json  CigFamily.Sample.json  CigFamily.json  CrypticFamily.Sample.json  CrypticFamily.json  CrytekFamily.Sample.json  CrytekFamily.json  CyanideFamily.Sample.json  CyanideFamily.json  EpicFamily.json  FrictionalFamily.Sample.json  FrictionalFamily.json  FrontierFamily.Sample.json  FrontierFamily.json  IWFamily.Sample.json  IWFamily.json  IdFamily.Sample.json  IdFamily.json  LucasFamily.Sample.json  LucasFamily.json  MonolithFamily.json  OriginFamily.Sample.json  OriginFamily.json  RedFamily.Sample.json  (+11 more)
Python/gamespecs/Unity/: pakbinary_unity.py
Python/gamespecs/cli/: _cli.py  _errors.py  test.py
Python/gamex/: Blizzard_pb2.py  GameX_Arkane.py  GameX_Base.py  GameX_Bethesda.py  GameX_Bioware.py  GameX_Black.py  GameX_Blizzard.py  GameX_Capcom.py  GameX_Cig.py  GameX_Cryptic.py  GameX_Crytek.py  GameX_Cyanide.py  GameX_Epic.py  GameX_Frictional.py  GameX_Frontier.py  GameX_IW.py  GameX_Id.py  GameX_Lucas.py  GameX_Monolith.py  GameX_Origin.py  GameX_Red.py  GameX_Ubisoft.py  GameX_Unity.py  GameX_Valve.py  GameX_WbB.py  __init__.py  _config.py  family.py  meta.py  pak.py  platform_opengl.py  store_abandon.py  store_blizzard.py  store_steam.py  util.py
Python/gamex/Arkane/: binary_danae.py  pakbinary_danae.py  pakbinary_void.py
Python/gamex/Base/: binary.py  pakbinary_zip.py
Python/gamex/Bethesda/: pakbinary_ba2.py  pakbinary_bsa.py
Python/gamex/Bioware/: pakbinary_aurora.py  pakbinary_myp.py
Python/gamex/Black/: pakbinary_dat.py
Python/gamex/Capcom/: pakbinary_arc.py  pakbinary_big.py  pakbinary_bundle.py  pakbinary_kpka.py  pakbinary_plist.py
Python/gamex/Cig/: pakbinary_p4k.py
Python/gamex/Cryptic/: pakbinary_hogg.py
Python/gamex/Origin/: pakbinary_u8.py  pakbinary_u9.py  pakbinary_uo.py
Python/gamex/Specs/: ArkaneFamily.Sample.json  ArkaneFamily.json  BethesdaFamily.Sample.json  BethesdaFamily.json  BiowareFamily.Sample.json  BiowareFamily.json  BlackFamily.Sample.json  BlackFamily.json  BlizzardFamily.json  CapcomFamily+0-D.json  CapcomFamily+E-L.json  CapcomFamily+M.json  CapcomFamily+N-R.json  CapcomFamily+S.json  CapcomFamily+T-Z.json  (+31 more)
(+5357 files in other folders)
