[metadata]
name = gamex
version = 0.0.1
author = Sky Morey
author_email = sky.morey@merkle.com
description = GameX is an open-source, cross-platform solution for delivering game assets as a service.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bclnet/GameX
classifiers =
    Programming Language :: python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False
install_requires =
    imageio
    psutil
    protobuf
    httpx
    pydantic
    typing-extensions

[options.entry_points]
console_scripts =
    gamex = gamex.cli:main