[metadata]
name = openstk
version = 0.0.1
author = Sky Morey
author_email = sky.morey@merkle.com
description = OpenStack.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bclnet/OpenStack
classifiers =
    Programming Language :: python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False
install_requires =
    numpy
    numpy-quaternion